tests/rosetta/transpiler/OCaml/accumulator-factory.ml
(* Generated by Mochi transpiler v0.10.39 on 2025-07-24 14:08 UTC *)


let rec __show v =
  let open Obj in
  let rec list_aux o =
    if is_int o && (magic (obj o) : int) = 0 then "" else
      let hd = field o 0 in
      let tl = field o 1 in
      let rest = list_aux tl in
      if rest = "" then __show (obj hd) else __show (obj hd) ^ "; " ^ rest
  in
  let r = repr v in
  if is_int r then string_of_int (magic v) else
  match tag r with
  | 0 -> if size r = 0 then "[]" else "[" ^ list_aux r ^ "]"
  | 252 -> (magic v : string)
  | 253 -> string_of_float (magic v)
  | _ -> "<value>"

exception Return

let rec accumulator sum =
  let __ret = ref (Obj.magic 0) in
  (try
  let store = ref ([sum]) in
let rec add nv =
  let __ret = ref (Obj.magic 0) in
  (try
  store := (List.mapi (fun __i __x -> if __i = 0 then (List.nth (!store) (0) +. nv) else __x) (!store));
  __ret := List.nth (!store) (0); raise Return
  with Return -> !__ret) in
  __ret := add; raise Return
  with Return -> !__ret)

let rec main () =
  let __ret = ref (Obj.magic 0) in
  (try
  let x = accumulator (1) in
  ignore (x (5));
  ignore (accumulator (3));
  print_endline ((string_of_int (x (2.3))));
    !__ret
  with Return -> !__ret)

let () =
  ignore (main ());
